feat: implement auth with jwt token
